--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     		<script src="src/parameters.js"></script>
     		<script src="src/group.js"></script>
     		<script src="src/constructor.js"></script>
+    		<script src="src/effect.js"></script>
     		<script src="src/boot.js"></script>
 		<script src="src/preload.js"></script>
 		<script src="src/colors.js"></script>
