--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     		<script src="src/boot.js"></script>
 		<script src="src/preload.js"></script>
 		<script src="src/colors.js"></script>
+		<script src="src/roll.js"></script>
 		<script src="src/hud.js"></script>
 		<script src="src/gametitle.js"></script>
     		<script src="src/background.js"></script>
