--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
 		<script src="src/paper.js"></script>
 		<script src="src/menupaper.js"></script>
     		<script src="src/effect.js"></script>
+		<script src="src/transitionsgroup.js"></script>
 		<script src="src/thegame.js"></script>
 		<script src="src/gameover.js"></script>	
 </head>
