--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Phaser Full Screen Mobile Example</title>
+		<title>Papermania</title>
+		<link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="chrome=1, IE=9">
 		<meta name="format-detection" content="telephone=no">
@@ -18,6 +19,7 @@
 		<script src="src/parameters.js"></script>
 		<script src="src/group.js"></script>
 		<script src="src/constructor.js"></script>
+		<script src="src/object_physics.js"></script>
 		<script src="src/preload.js"></script>
 		<script src="src/colors.js"></script>
 		<script src="src/roll.js"></script>
