--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="apple-mobile-web-app-title" content="Phaser App">
 
+		<script src="dat.gui.js"></script>
 		<script src="phaser.min.js"></script>
 		<script src="src/boot.js"></script>
 		<script src="src/parameters.js"></script>
+		<script src="src/player_opponent_parameters.js"></script>
 		<script src="src/group.js"></script>
 		<script src="src/constructor.js"></script>
 		<script src="src/object_physics.js"></script>
