--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 		<meta name="apple-mobile-web-app-status-bar-style" content="black" />
 		<meta name="apple-mobile-web-app-title" content="Phaser App">
 
-		<script src="dat.gui.js"></script>
+		<script type="text/javascript" src="src/dat.gui.js"></script>
 		<script src="phaser.min.js"></script>
 		<script src="src/boot.js"></script>
 		<script src="src/parameters.js"></script>
