--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 		<script src="src/object_physics.js"></script>
 		<script src="src/preload.js"></script>
 		<script src="src/colors.js"></script>
+		<script src="src/menu_network_opponent.js"></script>
 		<script src="src/roll.js"></script>
 		<script src="src/hud.js"></script>
 		<script src="src/gametitle.js"></script>
